[gd_scene load_steps=3 format=3 uid="uid://c175dpomx5ru4"]

[ext_resource type="Script" path="res://addons/sync_spreadsheets/files/csv_sync.gd" id="1_powa1"]
[ext_resource type="Script" path="res://addons/sync_spreadsheets/files/csv_http.gd" id="2_3pe52"]

[node name="Sync" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_powa1")

[node name="HTTP" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_3pe52")

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Spreadsheets"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "To get started, please click on \"Add new\", alternatively you can edit the settings directly with \"Edit Config\".
For each spreadsheet you have to set the Document ID and the Sheet Name or Sheet Gid."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SyncNow" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sync Now"

[node name="EditConfig" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Edit Config"

[node name="SaveConfig" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save Config"

[node name="SheetList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[node name="BottomButtons" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddButton" type="Button" parent="BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ Add New"

[node name="RemoveButton" type="Button" parent="BottomButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "- Remove Selected"

[connection signal="pressed" from="HBoxContainer/SyncNow" to="." method="_on_sync_now_pressed"]
[connection signal="pressed" from="HBoxContainer/EditConfig" to="." method="_on_edit_config_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveConfig" to="." method="_on_save_config_pressed"]
[connection signal="item_selected" from="SheetList" to="." method="_on_sheet_list_item_selected"]
[connection signal="pressed" from="BottomButtons/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="BottomButtons/RemoveButton" to="." method="_on_remove_button_pressed"]
